--- a/app.gradle
+++ b/app.gradle
@@ -56,6 +56,11 @@ println "........app.gradle........end"
 
 def apkFormatName = project.hasProperty("apkName") ? project.ext.apkName : "#an-#vn_#t_#fn_#bn_#ka.apk"
 
+/**
+ * 文件输出的文件夹(基于项目根目录的相对路径)
+ * */
+def output = project.hasProperty("apk_path") ? project.ext.apk_path : ".apk"
+
 android {
 
     compileSdkVersion Integer.parseInt(_C_SDK)
@@ -159,19 +164,6 @@ android {
             ext.alwaysUpdateBuildId = false
         }
     }
-    lintOptions {
-        abortOnError false
-        //https://www.jianshu.com/p/93678f8b3421
-        disable 'GoogleAppIndexingWarning'
-    }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-    // For Kotlin projects https://developer.android.com/studio/write/java8-support.html
-    kotlinOptions {
-        jvmTarget = "1.8"
-    }
 
     if (gradle.gradleVersion.startsWith("6")) {
         //android.packageBuildConfig = false
@@ -193,7 +185,9 @@ android {
 //        }
 //    }
 
-    def apkFolder = new File(project.rootDir.absolutePath + "/.apk")//rootProject.file("/.apk")
+    //rootProject.file("/.apk")
+    def apkFolder = new File(project.rootDir.absolutePath + "/" + output)
+
     apkFolder.mkdirs()
     println "\napp.gradle ${gradle.gradleVersion}→APK输出目录:${apkFolder.absolutePath}"
 
@@ -203,7 +197,7 @@ android {
         /*Gradle4.1 以上的方法*/
         applicationVariants.all { variant ->
             if (variant.buildType.name != "debug") {
-                variant.packageApplicationProvider.get().outputDirectory = apkFolder
+                variant.packageApplicationProvider.get().outputDirectory = new File(apkFolder, variant.name)
             }
             variant.outputs.forEach {
                 it.outputFileName = formatApkName(apkFormatName,
@@ -221,7 +215,7 @@ android {
         /*Gradle4.0 以上的方法*/
         applicationVariants.all { variant ->
             if (variant.buildType.name != "debug") {
-                variant.packageApplicationProvider.get().outputDirectory = apkFolder
+                variant.packageApplicationProvider.get().outputDirectory = new File(apkFolder, variant.name)
             }
             variant.outputs.forEach {
                 it.apkData.outputFileName = formatApkName(apkFormatName,
@@ -239,7 +233,7 @@ android {
         /*Gradle3.3 以上的方法*/
         applicationVariants.all { variant ->
             if (variant.buildType.name != "debug") {
-                variant.packageApplication.outputDirectory = apkFolder
+                variant.packageApplication.outputDirectory = new File(apkFolder, variant.name)
             }
 
             variant.packageApplication.outputScope?.apkDatas?.forEach { apkData ->
@@ -259,7 +253,7 @@ android {
         applicationVariants.all { variant ->
             if (variant.buildType.name != "debug") {
                 //new File(project.rootDir.absolutePath + "/apk")
-                variant.getPackageApplication().outputDirectory = apkFolder
+                variant.getPackageApplication().outputDirectory = new File(apkFolder, variant.name)
             }
 
             variant.getPackageApplication().outputScope.apkDatas.forEach { apkData ->
@@ -300,3 +294,57 @@ dependencies {
 
 apply from: 'https://gitee.com/angcyo/gradle/raw/master/version.gradle'
 apply from: 'https://gitee.com/angcyo/gradle/raw/master/collectMR.gradle'
+
+//https://www.jianshu.com/p/e7a40a592f15/
+//构建完成后, 将文件夹(./.apk)子目录中的apk文件, 复制到上一级
+gradle.buildFinished { buildResult -> /*BuildResult*/
+    def apkFolder = new File(project.rootDir.absolutePath + "/" + output)
+    def fileList = apkFolder.listFiles()
+    for (file in fileList) {
+        if (file.isDirectory()) {
+            def subFileList = file.listFiles()
+            for (subFile in subFileList) {
+                if (subFile.isFile() && subFile.name.endsWith(".apk")) {
+                    def targetFile = new File(apkFolder, subFile.name)
+                    if (!targetFile.exists() || subFile.lastModified() != targetFile.lastModified()) {
+                        //apk文件, 开始复制. 文件不一样的时候才复制
+                        copyFile(subFile.absolutePath, targetFile.absolutePath)
+                    }
+                }
+            }
+        }
+    }
+    println "构建完毕->${buildResult.action}"
+}
+
+/**
+ * 复制文件
+ * */
+def copyFile(String from, String toPath) {
+    InputStream input = null
+    OutputStream output = null
+    try {
+        File source = new File(from)
+        if (!source.exists()) {
+            return
+        }
+        File dest = new File(toPath)
+        println '复制文件:' + source.getAbsolutePath() + " -> " + dest.getAbsolutePath()
+
+        input = new FileInputStream(source)
+        output = new FileOutputStream(dest)
+        byte[] buf = new byte[1024]
+        int bytesRead
+        while ((bytesRead = input.read(buf)) != -1) {
+            output.write(buf, 0, bytesRead)
+        }
+        dest.setLastModified(source.lastModified())
+    } finally {
+        if (input != null) {
+            input.close()
+        }
+        if (output != null) {
+            output.close()
+        }
+    }
+}
