--- a/aar.gradle
+++ b/aar.gradle
@@ -1,5 +1,7 @@
+//2021-10-20 Using flatDir should be avoided because it doesn't support any meta-data formats.
+
 /*包含 aar 文件的目录名称*/
-def aarFolderName = "aar"
+def aarFolderName = project.hasProperty("aar_path") ? project.ext.aar_path : "aar"
 def aarFolder = new File(rootProject.rootDir.absolutePath, aarFolderName)
 
 repositories {
