--- a/pgyer.gradle
+++ b/pgyer.gradle
@@ -145,7 +145,7 @@ _pgyerUpload.doFirst {
             def json = response.body().string()
             response.close()
 
-            println "蒲公英上传结果:" + json
+            println "蒲公英上传返回:" + json
 
             def map = new com.google.gson.Gson().fromJson(json, Map.class)
             def data = map.data
