--- a/app.gradle
+++ b/app.gradle
@@ -75,6 +75,8 @@ android {
         versionCode Integer.parseInt(_V_CODE)
         versionName "$_V_NAME"
         multiDexEnabled true
+
+        //https://developer.android.com/studio/build/shrink-code?hl=zh-cn#groovy
         resConfigs "zh", "xhdpi" //, "en"
 
         buildConfigField "boolean", "SHOW_DEBUG", "false"
@@ -303,12 +305,41 @@ gradle.buildFinished { buildResult -> /*BuildResult*/
     for (file in fileList) {
         if (file.isDirectory()) {
             def subFileList = file.listFiles()
+
+            def isCopyFile = new File(file, ".copy") //文件是否已经复制过
+            if (!isCopyFile.exists()) {
+                isCopyFile.createNewFile()
+            }
+            def copyFileList = []
+            copyFileList = isCopyFile.readLines('UTF8')
+
             for (subFile in subFileList) {
-                if (subFile.isFile() && subFile.name.endsWith(".apk")) {
-                    def targetFile = new File(apkFolder, subFile.name)
-                    if (!targetFile.exists() || subFile.lastModified() != targetFile.lastModified()) {
+                def fileName = subFile.name
+                if (subFile.isFile() && fileName.endsWith(".apk")) {
+                    def ignoreFile = false
+
+                    def haveCopyFile = false
+
+                    //是否要忽略此文件名
+                    copyFileList.each {
+                        haveCopyFile = haveCopyFile || it == fileName
+                    }
+
+                    ignoreFile = haveCopyFile
+
+                    def targetFile = new File(apkFolder, fileName)
+                    if (targetFile.exists() && subFile.lastModified() != targetFile.lastModified()) {
+                        //如果目标文件存在, 但是和源文件时间不一样, 则强制需要复制
+                        ignoreFile = false
+                    }
+
+                    if (!ignoreFile) {
                         //apk文件, 开始复制. 文件不一样的时候才复制
                         copyFile(subFile.absolutePath, targetFile.absolutePath)
+
+                        if (!haveCopyFile) {
+                            isCopyFile.append("${fileName}\n") //添加已经复制过的文件名
+                        }
                     }
                 }
             }
