--- a/base.gradle
+++ b/base.gradle
@@ -39,3 +39,18 @@ android {
         threadCount 8
     }*/
 }
+
+//同时运行多个任务
+//https://docs.gradle.org/current/dsl/org.gradle.api.Task.html
+//https://docs.gradle.org/current/dsl/org.gradle.api.Task.html#org.gradle.api.Task:dependsOn(java.lang.Object[])
+/*
+task uploadApk(dependsOn: ['assembleRelease', '_pgyerUpload']) {
+    //dependsOn 'assembleRelease', '_pgyerUpload'
+    //todo
+}
+
+task uploadApk() {
+    //todo
+}
+uploadApk.dependsOn('assembleRelease')
+uploadApk.dependsOn('_pgyerUpload')*/
