--- a/libBase.gradle
+++ b/libBase.gradle
@@ -153,7 +153,7 @@ task javadocJar(type: Jar, dependsOn: javadoc) {
 }
 
 def libGroupId = project.hasProperty('libGroupId') ? project.property('libGroupId') : 'com.angcyo'
-def versionName = project.hasProperty('libVersionName') ? project.property('libVersionName') : '0.0.1'
+def versionName = project.hasProperty('libVersionName') ? project.property('libVersionName') : 'master-SNAPSHOT'//'0.0.1'
 def winRepo = project.hasProperty('libWinRepo') ? project.property('libWinRepo') : 'E:/AndroidProjects/maven'
 def macRepo = project.hasProperty('libMacRepo') ? project.property('libMacRepo') : '/Users/angcyo/Project/Android/GithubDemo/maven'
 
